--- a/dnsmasq/jp.conf
+++ b/dnsmasq/jp.conf
@@ -1,5 +1,12 @@
 # ----- JP ----- #
 # > Abema
+server=/abema.io/129.250.35.250
+server=/abema.tv/129.250.35.250
+server=/ds-linear-abematv.akamaized.net/129.250.35.250
+server=/ds-vod-abematv.akamaized.net/129.250.35.250
+server=/ameba.jp/129.250.35.250
+server=/hayabusa.io/129.250.35.250
+server=/mobile-collector.newrelic.com/129.250.35.250
 ipset=/abema.io/jp
 ipset=/abema.tv/jp
 ipset=/ds-linear-abematv.akamaized.net/jp
@@ -8,6 +15,14 @@ ipset=/ameba.jp/jp
 ipset=/hayabusa.io/jp
 ipset=/mobile-collector.newrelic.com/jp
 # > DMM
+server=/dmm-extension.com/129.250.35.250
+server=/dmm.co.jp/129.250.35.250
+server=/dmm.com/129.250.35.250
+server=/videomarket.jp/129.250.35.250
+server=/p-smith.com/129.250.35.250
+server=/vmdash-cenc.akamaized.net/129.250.35.250
+server=/img.vm-movie.jp/129.250.35.250
+server=/bam.nr-data.net/129.250.35.250
 ipset=/dmm-extension.com/jp
 ipset=/dmm.co.jp/jp
 ipset=/dmm.com/jp
@@ -17,34 +32,56 @@ ipset=/vmdash-cenc.akamaized.net/jp
 ipset=/img.vm-movie.jp/jp
 ipset=/bam.nr-data.net/jp
 # > Fuji TV
+server=/fujitv.co.jp/129.250.35.250
+server=/stream.ne.jp/129.250.35.250
 ipset=/fujitv.co.jp/jp
 ipset=/stream.ne.jp/jp
 # > Hulu JP
+server=/happyon.jp/129.250.35.250
+server=/hulu.jp/129.250.35.250
 ipset=/happyon.jp/jp
 ipset=/hulu.jp/jp
 # > NicoNico
+server=/dmc.nico/129.250.35.250
+server=/nicovideo.jp/129.250.35.250
+server=/nimg.jp/129.250.35.250
+server=/socdm.com/129.250.35.250
 ipset=/dmc.nico/jp
 ipset=/nicovideo.jp/jp
 ipset=/nimg.jp/jp
 ipset=/socdm.com/jp
 # > Paravi
+server=/paravi.jp/129.250.35.250
 ipset=/paravi.jp/jp
 # > Radiko
+server=/radiko.jp/129.250.35.250
+server=/radionikkei.jp/129.250.35.250
+server=/smartstream.ne.jp/129.250.35.250
 ipset=/radiko.jp/jp
 ipset=/radionikkei.jp/jp
 ipset=/smartstream.ne.jp/jp
 # > TVer
+server=/tver.jp/129.250.35.250
+server=/edge.api.brightcove.com/129.250.35.250
+server=/players.brightcove.net/129.250.35.250
 ipset=/tver.jp/jp
 ipset=/edge.api.brightcove.com/jp
 ipset=/players.brightcove.net/jp
 # > WOWOW
+server=/wowow.co.jp/129.250.35.250
 ipset=/wowow.co.jp/jp
 # > U-NEXT
+server=/unext.jp/129.250.35.250
+server=/nxtv.jp/129.250.35.250
 ipset=/unext.jp/jp
 ipset=/nxtv.jp/jp
 # > Karaoke@DAM
+server=/clubdam.com/129.250.35.250
 ipset=/clubdam.com/jp
 # > Game(Test)
+server=/cygames.jp/129.250.35.250
+server=/konosubafd.jp/129.250.35.250
+server=/colorfulpalette.org/129.250.35.250
 ipset=/cygames.jp/jp
 ipset=/konosubafd.jp/jp
 ipset=/colorfulpalette.org/jp
